Workaround for Intel 6xxx clear to 0/1 bug

This is ported form skia fixing https://skia-review.googlesource.com/c/17327/
and https://skia-review.googlesource.com/c/16427/

BUG=710443
TEST=WebGL conformance test:framebuffer-texture-clear.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2934733002
Cr-Commit-Position: refs/heads/master@{#486150}

Former-commit-id: 01aa041da4c2327324ae3470c8e29f4829a9e928